Improve hotkey behavior

--- a/src/app/design/molecules/badge-list/badge-list.component.html
+++ b/src/app/design/molecules/badge-list/badge-list.component.html
@@ -42,7 +42,7 @@
       [badgeText]="badgeLabel"
       [cancelButtonType]="'DARK'"
       [createHotkey]="hotkey()"
-      [showHotkeyTooltip]="showHotkeyTooltip()"
+      [disableHotkeys]="disableHotkeys()"
       (create)="onEntryCreate($event)"
     ></app-small-create-form>
   }
