Add hotkey behavior

--- a/src/app/campaign/pages/session-audio-overview-page/session-audio-overview-page.component.html
+++ b/src/app/campaign/pages/session-audio-overview-page/session-audio-overview-page.component.html
@@ -3,12 +3,14 @@
     <h1 class="heading">Recordings</h1>
 
     @if (store.hasWritePermission()) {
-      <a class="create-button" [routerLink]="createUrl()">
+      <a class="create-button" [routerLink]="createUrl()" #createLink>
         <button
           btn
           [kind]="'PRIMARY'"
           [icon]="'plus'"
           [text]="'Add Recording'"
+          [hotkey]="'c'"
+          (hotkeyPressed)="createLink.click()"
         ></button>
       </a>
     }
