--- a/src/app/design/organisms/rules/rules.component.html
+++ b/src/app/design/organisms/rules/rules.component.html
@@ -7,6 +7,8 @@
         [text]="'Add Rule'"
         [icon]="'plus'"
         (click)="addRule()"
+        [hotkey]="'c'"
+        (hotkeyPressed)="addRule()"
       ></button>
     </div>
   }
