--- a/src/app/design/organisms/spells/spells.component.html
+++ b/src/app/design/organisms/spells/spells.component.html
@@ -8,6 +8,8 @@
         [text]="'Add Spell'"
         [icon]="'plus'"
         (click)="addSpell()"
+        [hotkey]="'c'"
+        (hotkeyPressed)="addSpell()"
       ></button>
     </div>
   }
