--- a/src/app/design/templates/character-create-update/character-create-update.component.html
+++ b/src/app/design/templates/character-create-update/character-create-update.component.html
@@ -10,6 +10,8 @@
           (click)="onCancel()"
           [icon]="'times'"
           [kind]="'SECONDARY'"
+          [hotkey]="'q'"
+          (hotkeyPressed)="onCancel()"
         ></button>
       </div>
     </h1>
