--- a/src/app/design/templates/create-update/create-update.component.html
+++ b/src/app/design/templates/create-update/create-update.component.html
@@ -11,6 +11,8 @@
           (click)="cancel.emit()"
           [icon]="'times'"
           [kind]="'SECONDARY'"
+          [hotkey]="'q'"
+          (hotkeyPressed)="cancel.emit()"
         ></button>
       </div>
     </h1>
