--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
 <app-page [serverUrl]="serverUrl" (logout)="logout()"></app-page>
 <app-toast-overlay></app-toast-overlay>
 
-<app-hotkey-modal />
+<app-hotkey-modal class="d-none" />
