Add autofocus to small-create-form

--- a/src/app/design/molecules/small-create-form/small-create-form.component.html
+++ b/src/app/design/molecules/small-create-form/small-create-form.component.html
@@ -26,7 +26,7 @@
 <ng-template #createState>
   <form class="form">
     <select
-      [autofocus]="true"
+      #select
       class="form-select"
       style="width: unset"
       [attr.aria-label]="badgeText()"
