Simplify how focusing an element works when it gets rendered

--- a/src/app/design/molecules/small-create-form/small-create-form.component.html
+++ b/src/app/design/molecules/small-create-form/small-create-form.component.html
@@ -29,6 +29,7 @@
       #select
       class="form-select"
       style="width: unset"
+      focusOnRender
       [attr.aria-label]="badgeText()"
       [name]="selectFieldName()"
       [id]="'select'"
