--- a/src/app/design/templates/general-overview/general-overview.component.scss
+++ b/src/app/design/templates/general-overview/general-overview.component.scss
@@ -21,7 +21,8 @@
 
   &__image {
     width: 100%;
-    max-height: 23rem;
+    aspect-ratio: 3;
+    max-height: 14rem;
     max-width: 100%;
     object-fit: cover;
     object-position: bottom;
