--- a/src/app/design/molecules/edit-toggle/edit-toggle.component.html
+++ b/src/app/design/molecules/edit-toggle/edit-toggle.component.html
@@ -2,6 +2,9 @@
   btn
   class="edit-toggle"
   [kind]="buttonKind()"
-  (click)="onClick()"
   [icon]="_toggled() ? 'times' : 'pencil'"
+  (click)="onClick()"
+  [hotkey]="'e'"
+  [disabledHotkey]="disabledHotkey()"
+  (hotkeyPressed)="onClick()"
 ></button>
