--- a/src/app/design/templates/diaryentry/diaryentry.component.html
+++ b/src/app/design/templates/diaryentry/diaryentry.component.html
@@ -14,7 +14,7 @@
               btn
               [icon]="'pencil'"
               [kind]="'SECONDARY'"
-              [hotkey]="'e'"
+              [hotkey]="'a'"
               [disabledHotkey]="state() !== 'DISPLAY'"
               (hotkeyPressed)="editDiaryentryLink.click()"
             ></button>
