Add hotkey to form

--- a/src/app/design/molecules/form/form.component.html
+++ b/src/app/design/molecules/form/form.component.html
@@ -36,6 +36,9 @@
         [icon]="'times'"
         [text]="'Cancel'"
         (click)="onCancel()"
+        [hotkey]="'q'"
+        [disabledHotkey]="disabledHotkeys()"
+        (hotkeyPressed)="onCancel()"
       ></button>
     </div>
   }
