--- a/src/app/design/organisms/rule/rule.component.html
+++ b/src/app/design/organisms/rule/rule.component.html
@@ -72,6 +72,7 @@
     [fields]="formlyFields"
     [cancelButtonType]="cancelButtonType()"
     [submitButtonType]="submitButtonType()"
+    [disabledHotkeys]="disabledHotkeys()"
     (formlySubmit)="onRuleUpdate($event)"
     (formlyCancel)="changeState('DISPLAY', undefined)"
   ></app-form>
