general z-index improvements for hotkey modal

--- a/src/app/design/organisms/hotkey-modal/hotkey-modal.component.html
+++ b/src/app/design/organisms/hotkey-modal/hotkey-modal.component.html
@@ -7,6 +7,8 @@
     type="button"
     aria-label="Close"
     (click)="dismiss()"
+    [hotkey]="'q'"
+    (hotkeyPressed)="dismiss()"
   >
     <app-icon [icon]="'times'"></app-icon>
   </button>
