--- a/src/app/design/templates/home/home.component.html
+++ b/src/app/design/templates/home/home.component.html
@@ -56,3 +56,13 @@
     ></app-icon-card-list>
   </article>
 </app-page-container>
+
+@if (isHotkeyModifierPressed()) {
+  <button
+    btn
+    class="hotkey-help"
+    [kind]="'LIGHT-OUTLINE'"
+    [disabled]="true"
+    [text]="'Hotkey Help: Alt + H'"
+  ></button>
+}
