--- a/src/app/campaign/pages/graph-page/graph-page.component.html
+++ b/src/app/campaign/pages/graph-page/graph-page.component.html
@@ -179,6 +179,7 @@
                   [toggleSize]="'SMALL'"
                   [confirmationQuestion]="'Delete link?'"
                   [cancelButtonType]="'DARK'"
+                  [enableHotkey]="false"
                   (confirm)="onDeleteLink(item.link.id!)"
                 ></app-confirmation-toggle-button>
               </div>
