--- a/src/app/design/templates/campaign-admin/campaign-admin.component.html
+++ b/src/app/design/templates/campaign-admin/campaign-admin.component.html
@@ -77,6 +77,7 @@
               class="user-group__remove-button"
               [icon]="'trash'"
               [toggleSize]="'SMALL'"
+              [enableHotkey]="false"
               [confirmationQuestion]="'Remove ' + user.username + ' as admin?'"
               (confirm)="removeAdmin.emit(user)"
             ></app-confirmation-toggle-button>
@@ -115,6 +116,7 @@
               class="user-group__remove-button"
               [icon]="'trash'"
               [toggleSize]="'SMALL'"
+              [enableHotkey]="false"
               [confirmationQuestion]="'Remove ' + user.username + ' as member?'"
               (confirm)="removeMember.emit(user)"
             ></app-confirmation-toggle-button>
@@ -153,6 +155,7 @@
               class="user-group__remove-button"
               [icon]="'trash'"
               [toggleSize]="'SMALL'"
+              [enableHotkey]="false"
               [confirmationQuestion]="'Remove ' + user.username + ' as guest?'"
               (confirm)="removeGuest.emit(user)"
             ></app-confirmation-toggle-button>
@@ -216,6 +219,7 @@
                 class="user-group__remove-button"
                 [icon]="'trash'"
                 [toggleSize]="'SMALL'"
+                [enableHotkey]="false"
                 [confirmationQuestion]="'Remove response?'"
                 (confirm)="removeEmptySearchResponse.emit(emptyResponse)"
               ></app-confirmation-toggle-button>
