--- a/src/app/campaign/pages/campaign-config-administration-page/campaign-config-administration-page.component.html
+++ b/src/app/campaign/pages/campaign-config-administration-page/campaign-config-administration-page.component.html
@@ -2,7 +2,7 @@
   [tableData]="tableData()"
   [currentCampaignId]="globalStore.currentCampaign()?.pk"
   [hasCampaignWritePermission]="store.hasCampaignWritePermission()"
-  [canDeleteGlobalEntries]="!!globalStore.isGlobalAdmin()"
+  [canDeleteGlobalEntries]="!!authStore.isGlobalAdmin()"
   (loadTableEntries)="loadTableEntries($event)"
   (deleteTableEntry)="deleteTableEntry($event)"
   (createTableEntry)="createTableEntry($event)"
