--- a/src/app/design/templates/map/map.component.html
+++ b/src/app/design/templates/map/map.component.html
@@ -5,6 +5,7 @@
         <a [routerLink]="updateUrl()" tabindex="-1" #editLink>
           <button
             btn
+            aria-label="Edit Map button"
             [icon]="'pencil'"
             [kind]="'SECONDARY'"
             [hotkey]="'e'"
