--- a/src/app/design/organisms/quest-table/quest-table.component.html
+++ b/src/app/design/organisms/quest-table/quest-table.component.html
@@ -5,9 +5,11 @@
 
     <!-- Filterselect -->
     <label class="col-sm-3 d-flex align-items-center justify-content-end">
-      <span hidden> Filter by QuestState </span>
       <select
         class="heading__select flex-1"
+        [attr.aria-label]="
+          'Filter quests of ' + questTaker() + ' by QuestState'
+        "
         (change)="updateDisplayState($event)"
       >
         @for (state of DISPLAY_STATES; track state) {
