--- a/src/app/design/templates/home/home.component.scss
+++ b/src/app/design/templates/home/home.component.scss
@@ -4,6 +4,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  position: relative;
 
   &__heading-container {
     margin-bottom: var(--spacer-3);
@@ -73,8 +74,10 @@
 }
 
 .hotkey-help {
-  position: fixed;
-  top: 3%;
-  right: 3%;
+  position: absolute;
+  top: var(--spacer-3);
+  right: var(--spacer-3);
   opacity: 0.5;
+  z-index: 0;
+  width: fit-content;
 }
