Refine typeahead and all that

--- a/src/app/design/molecules/formly-typeahead-field/formly-typeahead-field.component.html
+++ b/src/app/design/molecules/formly-typeahead-field/formly-typeahead-field.component.html
@@ -3,7 +3,7 @@
   @if (selectedItemLabel) {
     <app-badge
       class="form-control__selected-value-badge"
-      [kind]="'SECONDARY'"
+      [kind]="'DARK'"
       [text]="selectedItemLabel"
       [title]="'Clear this option'"
       [icon]="'times'"
