--- a/src/app/design/organisms/image-grid/image-grid.component.scss
+++ b/src/app/design/organisms/image-grid/image-grid.component.scss
@@ -26,7 +26,9 @@
   opacity: 0.75;
   transition: opacity 0.2s ease-in-out;
 
-  &:hover {
+  &:hover,
+  &:focus-visible {
+    outline: none;
     opacity: 1;
 
     .entry__heading {
